# IAB-BS2025

./: README.md  _quarto.yml  dev.sh  index.qmd  main.py  publish.sh  pyproject.toml  styles.css  styles.scss
.claude/: settings.local.json
.obsidian/: workspace.json
docs/: index.html  listings.json  search.json  styles.css  styles.scss
docs/posts/: 01wk-2-slides.html  01wk-2.html  01wk-slides.html  01wk.html  02wk-1-slides.html  02wk-1.html  02wk-2-slides.html  02wk-2.html  02wk-slides.html  02wk.html  03wk-1-slides.html  03wk-1.html  08wk-1-python-slides.html  08wk-1-python.html  08wk-1-slides.html  08wk-1.html  08wk-2-python-slides.html  08wk-2-python.html  08wk-2-slides.html  08wk-2.html  10wk-1-python-slides.html  10wk-1-python.html  10wk-1-slides.html  10wk-1.html  10wk-2-python-slides.html  10wk-2-python.html  10wk-2-slides.html  10wk-2.html  11wk-1-r-slides.html  11wk-1-r.html  11wk-1-slides.html  11wk-1.html  11wk-2 copy-slides.html  11wk-2 copy.html  11wk-2-r-slides.html  11wk-2-r.html  11wk-2-slides.html  11wk-2.html  12wk-1-python-slides.html  12wk-1-python.html  (+29 more)
posts/: 01wk-2.ipynb  01wk-2.qmd  02wk-1.ipynb  02wk-1.qmd  02wk-2.ipynb  02wk-2.qmd  02wk.ipynb  03wk-1.ipynb  03wk-1.qmd  08wk-1-python.qmd  08wk-1.qmd  08wk-2-python.qmd  08wk-2.qmd  10wk-1-python.qmd  10wk-1.qmd  10wk-2-python.qmd  10wk-2.qmd  11wk-1-r.ipynb  11wk-1.ipynb  11wk-2-r.ipynb  11wk-2.ipynb  12wk-1-python.qmd  12wk-1.qmd  13wk-1.qmd  13wk-2.qmd  14wk-1.qmd  14wk-2.qmd  15wk-1.qmd  A1.qmd  A3.qmd  _metadata.yml  custom.scss  hw01.ipynb  hw01.qmd  mid.qmd
(+23 files in other folders)
